@@ -16,5 +16,6 @@ REDHAT_BUGZILLA=670079,671063
 - fedpkg and koji build for every branches are revealed.
 - Now set rawhide as f16, release dists are f15,f14,f13.
 - rpm build process is now refined, no unnecessary build.
-- Rename target push_svc_tag to push_post_build.
+- Renamed target push_svc_tag to push_post_build.
+- Renamed module UseFedpkg to ManageReleaseOnFedora
 
